# template-bun-wasm-rust-library

./: .gitignore  Cargo.toml  README.md  package.json  tsconfig.build.json  tsconfig.json
.github/workflows/: check-bun-wasm-rust-dependencies.yml  check-rust-dependencies.yml  release-bun-wasm-rust-library.yml
src/: lib.rs  lib.ts
tests/: integration_test.rs  world_test.ts
